<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?login_background"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_txtv_login"
                android:layout_width="0dp"
                app:layout_constraintWidth_default="wrap"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/label_login_login"
                android:textColor="?colorOnBackground"
                android:textAppearance="@style/TextAppearance.MySmoothieSample.Headline1"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edtv_emailaddress"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_56dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:textColorHint="?colorOnSurface"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:boxBackgroundColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@+id/login_txtv_login"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/label_login_edt_emailaddress_hint"
                android:background="?colorOnPrimary"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp"
                android:textAppearance="@style/TextAppearance.MySmoothieSample.Body1"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edtv_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_56dp"
                android:textColorHint="?colorOnSurface"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_edtv_emailaddress"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/label_login_edt_password_hint"
                    android:background="?colorOnPrimary"
                    app:hintTextColor="?colorPrimary"
                    android:paddingLeft="@dimen/dimen_16dp"
                    android:paddingRight="@dimen/dimen_16dp"
                    android:textAppearance="@style/TextAppearance.MySmoothieSample.Body1"
                    android:paddingStart="@dimen/dimen_16dp" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn_loginbtn"
                style="@style/Widget.MySmoothieSample.Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_72dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:backgroundTint="?colorOnSurface"
                android:text="@string/button_label_welcome_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAppearance="@style/TextAppearance.MySmoothieSample.Button"
                app:layout_constraintTop_toBottomOf="@+id/login_edtv_password" />

            <TextView
                android:id="@+id/login_link_donthaveaccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_28dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="?colorOnBackground"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/login_btn_loginbtn"
                android:textAppearance="@style/TextAppearance.MySmoothieSample.Body1"
                android:text="@string/label_login_donthaveaccount_signup"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>